2004-12-20  Johannes Schmid <jhs@cvs.gnome.org>
	
	* plugins/cvs-plugin/cvs-actions.c: Use current editor filename as 
	default

2004-12-20  Naba Kumar  <naba@gnome.org>
	
	*libanjuta/plugins.c, plugins/file-loader/plugin.c:
	Show busy cursor during loading and unloading.
	
2004-12-19  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-plugin.c, libanjuta/anjuta-ui.c: Fixed
	memory leaks. Disabled debug print.

	* plugins/symbol-browser/an_symbol_view.c,
	plugins/symbol-browser/plugin.c,
	plugins/symbol-browser/plugin.h: Fixed loading and unloading
	problems. Creates SymbolView object every time when the
	plugin is activated.

	* plugins/project-manager/plugin.c: Close project when
	deactivating.
	
2004-12-18  Naba Kumar  <naba@gnome.org>

	* po/POTFILES.in: Removed commented lines.
	* configure.in: Commented dupilcate call to AC_PROG_INTLTOOL.
	* plugins/devhelp/plugin.c: Fixed loading/unloading bug.
	* plugins/gdb/plugin.c: Fixed compile error.
	
	Patch from: Mark R. Pariente  <mark@demar.com.tr>
	* libegg/eggcellrendererkeys.c: Fixed compile error.
	
2004-12-18  Naba Kumar  <naba@gnome.org>

	* plugins/file-loader/plugin.c: Fixed loading bug.
	
	*plugins/debug-manager/plugin.c, plugins/debug-manager/plugin.h,
	plugins/devhelp/plugin.c, plugins/editor/plugin.c,
	plugins/file-manager/an_file_view.c, plugins/file-manager/plugin.c,
	plugins/gdb/plugin.c, src/shell.c, src/shell.h: Fixed memory leaks
	and corruptions. Fixed loading and unloading of plugins.
	
2004-12-17  Naba Kumar  <naba@gnome.org>
	
	* plugins/file-loader/Makefile.am,
	plugins/file-loader/plugin.c,
	plugins/project-manager/plugin.c: Fixed memory corruption
	and disposition codes. Added missing plugin.h in Makefile.am.

2004-12-16  Naba Kumar  <naba@gnome.org>

	* plugins/symbol-browser/an_symbol_view.c,
	plugins/symbol-browser/plugin.c: Fixed finalization and disposition
	codes. Fixed memory leaks and corruptions.

	* plugins/build-basic-autotools/build-basic-autotools.c